# LxShapefilesMerge

./: .gitignore  CMakeLists.txt  README.md  vcpkg_deps.txt
app/: CMakeLists.txt
app/include/: defs.h  defs_boost.h  defs_cgal.h  defs_common.h  facet_graph_wrapper.h  merge_manager.h  overlay_labeler.h  parameters.h  segment_graph.h  segment_graph_wrapper.h  shapefiles_merge_utilities.h
app/src/: main.cpp  merge_manager.cpp  overlay_labeler.cpp  parameters.cpp  segment_graph.cpp  shapefiles_merge_utilities.cpp
